routers for blogs service
